Add special-casing for hosted docs in DriveFS for browser open dialogs.

Hosted docs need to be redirected to their URLs to open successfully.
Hosted docs opened from the files app apply this transformation, but
files selected via the open dialog do not. Add this special-casing for
open dialog opens as well.

Bug: 906902
No-try: true
Change-Id: Ie64a6d25c97a3954cfa6d7e2694f29e191777257
Reviewed-on: https://chromium-review.googlesource.com/c/1343473
Commit-Queue: Sam McNally <sammc@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Sergei Datsenko <dats@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611070}
Former-commit-id: de54dcb37e43fc511cf498f19e097efa07382616