chrome/browser/ui/browser.cc
@@ -1986,18 +1986,29 @@ void Browser::FileSelectedWithExtraInfo(const ui::SelectedFileInfo& file_info,
 
   GURL url = net::FilePathToFileURL(file_info.local_path);
 
-#if defined(OS_CHROMEOS)
-  const GURL external_url =
-      chromeos::CreateExternalFileURLFromPath(profile_, file_info.file_path);
-  if (!external_url.is_empty())
-    url = external_url;
-#endif
-
   if (url.is_empty())
     return;
 
+#if defined(OS_CHROMEOS)
+  chromeos::ResolveExternalFileUrlFromPath(
+      profile_, file_info.file_path,
+      base::BindOnce(
+          [](base::WeakPtr<Browser> weak_this, GURL url, GURL external_url) {
+            if (!weak_this)
+              return;
+
+            if (!external_url.is_empty())
+              url = std::move(external_url);
+
+            weak_this->OpenURL(OpenURLParams(url, Referrer(),
+                                             WindowOpenDisposition::CURRENT_TAB,
+                                             ui::PAGE_TRANSITION_TYPED, false));
+          },
+          weak_factory_.GetWeakPtr(), std::move(url)));
+#else
   OpenURL(OpenURLParams(url, Referrer(), WindowOpenDisposition::CURRENT_TAB,
                         ui::PAGE_TRANSITION_TYPED, false));
+#endif
 }
 
 ///////////////////////////////////////////////////////////////////////////////
